Fixed scrollbar in viewer

--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -4,22 +4,24 @@
 	height: 100%;
 	width: 50%;
 	display: inline-block;
-    float: right;
 	position: absolute;
 	top: 0;
 	background-color: #fff;
     overflow: hidden;
 }
 
+#viewer-container {
+    overflow-y: scroll;
+	height: 100%;
+}
+
 #viewer {
 	max-width: 850px;
 	margin: 0 auto;
 	padding: 13px 10px 100px 10px;
-    overflow-y: scroll;
     word-wrap: break-word;
 	box-sizing: border-box;
 	font-family: sans-serif;
-	height: 100%;
 }
 
 #viewer * {
